# marine_simulator

./: README.md
marine_gz_sim/: CMakeLists.txt  package.xml
marine_gz_sim/launch/: marine_gz_sim_launch.py
marine_gz_sim/models/Vessel A/: model.sdf
marine_gz_sim/models/Vessel B/: model.sdf
marine_gz_sim/models/Vessel B/meshes/: Boat02.dae
marine_gz_sim/models/Vessel C/: model.sdf
marine_gz_sim/models/Vessel D/: model.config
marine_gz_sim/models/seabed/: model.sdf
marine_gz_sim/worlds/: ocean_world.sdf
marine_ignition/: CMakeLists.txt  package.xml
marine_ignition/launch/: marine_ignition_launch.py
marine_ignition/models/Coast Water/: model.sdf
marine_ignition/models/Vessel A/: model.config  model.sdf
marine_ignition/models/Vessel A/meshes/: Boat01.dae
marine_ignition/models/Vessel B/: model.config  model.sdf
marine_ignition/models/Vessel C/: model.config
marine_ignition/models/Vessel C/meshes/: Boat03.dae
marine_ignition/models/Vessel D/: model.sdf
marine_ignition/models/Vessel D/meshes/: Boat04.dae
marine_ignition/models/Waves/: model.config  model.sdf
marine_ignition/models/Waves/materials/programs/: GerstnerWaves_fs.metal  GerstnerWaves_fs_330.glsl
