<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marine_ignition</name>
  <version>0.0.0</version>
  <description>This package provides a comprehensive framework for simulating marine environments and vehicles in the Gazebo simulation platform. Designed for research and development in marine robotics, it enables realistic simulation of surface and underwater vessels, hydrodynamic interactions, and environmental conditions such as waves, currents, and buoyancy. The package includes Gazebo plugins, sensor models, and example worlds tailored for marine applications, supporting seamless integration with ROS for control, navigation, and visualization.</description>
  <maintainer email="haroon300@hotmail.com">Haroon Rasheed</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
<!-- This package was generated using the Turtle Nest ROS 2 package creator -->
